@@ -186,6 +186,7 @@ Section "Visual Studio package" SecPackage
   ${File} ..\bin\${CONFIG}\ vdserver.exe
   ${File} ..\bin\${CONFIG}\ pipedmd.exe
   ${File} ..\bin\${CONFIG}\ filemonitor.dll
+  ${File} ..\bin\${CONFIG}\ dcxxfilt.exe
   ${File} ..\ README.md
   ${File} ..\ LICENSE_1_0.txt
   ${File} ..\ CHANGES
